--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -86,7 +86,7 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="col-12 sol-sm-4">
+                <div class="col-12 col-sm-4">
                     <div class="text-center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
