--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,10 @@
 
     <div class="container">
         <div class="row" >
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href=".index.html">Home</a></li>
+                <li class="breadcrumb-item active">About Us</li>
+            </ol>
             <div class="w-100">
                <h3>About Us</h3>
                <hr>
