add reserve button

--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -43,6 +43,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" alt="logo" class="img-fluid">
                 </div>
+                <div class="btn-group col-12 col-sm align-self-center" role="group">
+                    <a role="button" class="btn btn-warning" href="#"> <strong>Reserve Table</strong></a>
+                </div>
             </div>
         </div>
     </header>
