create reserve table form and 1st row

--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -92,6 +92,45 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-12 col-md-6">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <div>
+                            <form>
+                                <div class="form-group row">
+                                    <label for="radio-num-of-guests" class="col-md-3 col-form-label">Number of Guests</label>
+                                    <div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" id="radio-num-of-guests1" name="numOfGuests" class="form-check-input">
+                                            <label for="radio-num-of-guests1" class="form-check-label">1</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" id="radio-num-of-guests2" name="numOfGuests" class="form-check-input">
+                                            <label for="radio-num-of-guests2" class="form-check-label">2</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" id="radio-num-of-guests3" name="numOfGuests" class="form-check-input">
+                                            <label for="radio-num-of-guests3" class="form-check-label">3</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" id="radio-num-of-guests4" name="numOfGuests" class="form-check-input">
+                                            <label for="radio-num-of-guests4" class="form-check-label">4</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" id="radio-num-of-guests5" name="numOfGuests" class="form-check-input">
+                                            <label for="radio-num-of-guests5" class="form-check-label">5</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
