finalize reserve table form

--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -94,7 +94,7 @@
         </div>
 
         <div class="row row-content justify-content-center">
-            <div class="col-12 col-sm-12 col-md-6">
+            <div class="col-12 col-sm-8 col-md-8">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                     <div class="card-body">
@@ -123,6 +123,15 @@
                                             <input type="radio" id="radio-num-of-guests5" name="numOfGuests" class="form-check-input">
                                             <label for="radio-num-of-guests5" class="form-check-label">5</label>
                                         </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="dateAndTime" class="col-12 col-md-4 col-form-label">Date and Time</label>
+                                    <div class="col-7 col-md-5">
+                                        <input type="date" class="form-control" id="date" name="date">
+                                    </div>
+                                    <div class="col-5 col-md-3">
+                                        <input type="time" class="form-control" id="time" name="time">
                                     </div>
                                 </div>
                             </form>
