--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -40,11 +40,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" alt="logo" class="img-fluid">
                 </div>
-                <div class="btn-group col-12 col-sm align-self-center" role="group">
-                    <a role="button" class="btn btn-warning" href="#"> <strong>Reserve Table</strong></a>
+                <div class="btn-group col-12 col-sm-3 align-self-center" role="group">
+                    <a role="button" class="btn btn-warning" href="#reserveForm"> <strong>Reserve Table</strong></a>
                 </div>
             </div>
         </div>
@@ -99,12 +99,12 @@
         </div>
 
         <div class="row row-content justify-content-center">
-            <div class="col-12 col-sm-8 col-md-8">
+            <div class="col-12 col-sm-8">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                     <div class="card-body">
                         <div>
-                            <form>
+                            <form id="reserveForm">
                                 <div class="form-group row">
                                     <label for="radio-num-of-guests" class="col-md-3 col-form-label">Number of Guests</label>
                                     <div>
