--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -102,8 +102,21 @@
 
         <div class="row">
             <div class="col-12">
-
                 <h2>Corporate Leadership</h2>
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a href="#peter" role="tab" data-toggle="tab" class="nav-link active">Peter Pan, CEO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#danny" role="tab" data-toggle="tab" class="nav-link">Danny Witherspoon, CF)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#agumbe" role="tab" data-toggle="tab" class="nav-link">Agumbe Tang, CTO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#alberto" role="tab" data-toggle="tab" class="nav-link">Alberto Somayya, Exec. Chef</a>
+                    </li>
+                </ul>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
                 <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
