--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -44,7 +44,7 @@
                     <img src="img/logo.png" alt="logo" class="img-fluid">
                 </div>
                 <div class="btn-group col-12 col-sm-3 align-self-center" role="group">
-                    <a role="button" class="btn btn-warning" href="#reserveForm"> <strong>Reserve Table</strong></a>
+                    <a role="button" class="btn btn-block btn-warning nav-link" href="#reserveForm" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom"><strong>Reserve Table</strong></a>
                 </div>
             </div>
         </div>
@@ -193,6 +193,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(() => {
+            $('[data-toggle="tooltip"]').tooltip();
+        })
+    </script>
 
 </body>
 
