--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -48,7 +48,30 @@
                         &times;
                     </button>
                 </div>
-                <div class="modal-body"></div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label for="exampleInput" class="sr-only"></label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exampleInput" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label for="exampleInputPassword" class="sr-only">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input">
+                                    <label class="form-check-label">Remember me</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button class="btn btn-secondary btn-sm ml-auto" type="button" data-dismiss="modal">Cancel</button>
+                            <button class="btn btn-primary btn-sm ml-1" type="submit">Sign in</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
