--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a class="" data-toggle="modal" data-target="#loginModal" href="javascript:void(0)">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
