--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -256,7 +256,7 @@
                         <a href="http://www.linkedin.com/in/" class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin fa-lg"></i></a>
                         <a href="http://twitter.com/" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter fa-lg"></i></a>
                         <a href="http://youtube.com/" class="btn btn-social-icon btn-youtube"><i class="fa fa-youtube fa-lg"></i></a>
-                        <a href="mailto:" class="btn btn-social-icon><i class="fa fa-envelope-o fa-lg"></i></a>
+                        <a href="mailto:" class="btn btn-social-icon"><i class="fa fa-envelope-o fa-lg"></i></a>
                     </div>
                 </div>
            </div>
@@ -273,7 +273,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
     <!-- endbuild  -->
 </body>
 
